--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "express": "^4.16.1",
     "jsonwebtoken": "^8.0.1",
     "material-ui": "^0.19.3",
+    "moment": "^2.19.1",
     "mongoose": "^4.12.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-big-calendar": "^0.16.1",
     "react-dom": "^16.0.0",
+    "react-event-calendar": "^0.3.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-tap-event-plugin": "^3.0.2",
