--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch --config jest.config.js --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "start": "nodemon --use_strict index.js",
     "bundle": "webpack"
   },
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "dayz": "^0.8.0",
     "express": "^4.16.1",
     "jsonwebtoken": "^8.0.1",
     "material-ui": "^0.19.3",
@@ -23,6 +24,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-big-calendar": "^0.16.1",
+    "react-calendar-component": "^1.2.2",
     "react-dom": "^16.0.0",
     "react-event-calendar": "^0.3.0",
     "react-router": "^4.2.0",
@@ -33,10 +35,18 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.1.0",
+    "jest": "^21.2.1",
     "nodemon": "^1.12.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.0.0",
     "webpack": "^3.6.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "./jestSetup.js"
   }
 }
