--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.3",
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
     "react-addons-test-utils": "^15.6.2",
