photo galary built with Redux

--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "react-calendar-component": "^1.2.2",
     "react-dom": "^16.0.0",
     "react-event-calendar": "^0.3.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sql": "^0.78.0",
     "validator": "^9.0.0"
   },
@@ -37,6 +41,7 @@
     "babel-core": "^6.26.0",
     "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
