--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-search": "^2.0.5",
+    "react-search-input": "^0.11.3",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
